removing user/pass when adding controllers adding api_key to support keycloak updating docs
